# long_running_db_notification

./: .gitignore  Cargo.toml  Dockerfile  Readme.md
.github/workflows/: docker-build-and-push.yml
src/: bot_responer.rs  database.rs  main.rs  message_formatter.rs  message_sender.rs
