[package]
name = "long_running_db_notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4.24", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
futures = "0.3.29"
teloxide = { version = "0.12", features = ["macros"] }
async-trait = "0.1"